# dungeonRL

./: README.md  main.py  requirements.txt  requirements_torch_gpu.txt  setup.sh
gym_dnd/: __init__.py  abilities.py  character.py  classes.py  conditions.py  creature.py  pyproject.toml  setup.py  skills.py  spells.py
gym_dnd/envs/: combat.py  config.json
gym_dnd/src/: utils.py
src/: jd_spells.py  main.py  utils.py
